# Reference-Data-Command-Center

./: .env.example  .gitignore  API_EXAMPLES.md  DATABASE_INTEGRATION.md  Dockerfile  INTEGRATION_COMPLETE.md  LICENSE  QUICK_START.md  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/: copilot-instructions.md
app/: __init__.py  main.py
app/api/: admin.py  applications.py  health.py  loans.py  reference_data.py
app/core/: config.py  database.py
app/models/: __init__.py  loan_models.py  reference_data.py
app/schemas/: loan_schemas.py  reference_data.py
app/services/: database_service.py  reference_data_loader.py
data/: exchange_rates.json  formatted_reference_data.json  loan_fees.json  loan_products.json  loan_rates.json  loan_requirements.json  loan_terms.json  risk_categories.json
scripts/: init_db.py  load_reference_data.py
tests/: conftest.py  test_api.py  test_reference_data_loader.py
webiste/: README.md  index.html  package-lock.json  package.json
webiste/src/: App.css  App.tsx  index.css
webiste/src/components/: AdminDashboard.tsx  AmortizationChart.tsx  ApplicationForm.tsx  ApplicationStats.tsx  ApplicationTracking.tsx  EligibilityCalculator.tsx  InterestRateHistory.tsx  LoanComparison.tsx
webiste/src/utils/: pdfExport.ts
